<resources>
    <string name="app_name">DaftarMahasiswa</string>
    <string name="action_settings">Settings</string>
    <string name="logo_user">Male or Female</string>
    <string name="txtNIM">NIM</string>
    <string name="txtNama">Nama</string>
    <string name="txtAlamat">Alamat</string>
    <string name="inputNIM">masukkan NIM</string>
    <string name="inputNama">masukkan Nama</string>
    <string name="inputAlamat">masukkan Alamat</string>
    <string name="rb1">Laki-Laki</string>
    <string name="rb2">Perempuan</string>
    <string name="strTitleAlert">Tambah Data</string>
    <string name="btnKlikstr">Tambah</string>
</resources>
