<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputNIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/inputNIM"/>

    <EditText
        android:id="@+id/inputNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/inputNIM"
        android:layout_below="@+id/inputNIM"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/inputNama" />

    <EditText
        android:id="@+id/inputAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/inputNama"
        android:layout_below="@+id/inputNama"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/inputAlamat" />

    <RadioGroup
        android:id="@+id/radioJnsKel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/inputAlamat"
        android:layout_below="@+id/inputAlamat"
        android:layout_marginTop="20dp" >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb1" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb2" />
    </RadioGroup>

</RelativeLayout>